--- a/redux-todo-express/package.json
+++ b/redux-todo-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express",
+  "name": "redux-todo-express",
   "version": "1.0.0",
   "description": "Express server of Redux TODO application",
   "main": "index.js",
