--- a/redux-todo-express/package.json
+++ b/redux-todo-express/package.json
@@ -4,11 +4,19 @@
   "description": "Express server of Redux TODO application",
   "main": "index.js",
   "scripts": {
+    "serve": "nodemon app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.17",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
