--- a/redux-todo-express/package.json
+++ b/redux-todo-express/package.json
@@ -15,6 +15,11 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
