--- a/redux-todo-express/package.json
+++ b/redux-todo-express/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongodb": "^4.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
