--- a/redux-todo-express/package.json
+++ b/redux-todo-express/package.json
@@ -4,7 +4,7 @@
   "description": "Express server of Redux TODO application",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon app.ts",
+    "serve": "nodemon ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
