--- a/redux-todo-react/package.json
+++ b/redux-todo-react/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "typescript": "^4.5.5",
