--- a/redux-todo-react/package.json
+++ b/redux-todo-react/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "typescript": "^4.5.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
