--- a/redux-todo-react/package.json
+++ b/redux-todo-react/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.27.2",
     "immer": "^9.0.12",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
