feat(common): change API enpoint as '/api'
[react]
- set axios baseURL as /api
- add proxy property to package.json

[express]
- add prefix '/api' to API paths

--- a/redux-todo-react/package.json
+++ b/redux-todo-react/package.json
@@ -62,5 +62,6 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "2.5.1"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
