--- a/redux-todo-express/package.json
+++ b/redux-todo-express/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon ./src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ts-start": "ts-node ./src/app.ts"
   },
   "author": "",
   "license": "ISC",
